Update: Insert Sonar Qube into gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,13 @@ yarn-error.log*
 .env.*.local
 
 # ------------------------
+# SonarQube
+# ------------------------
+.sonarqube/
+sonar-report.json
+sonar-scanner.log
+
+# ------------------------
 # Others
 # ------------------------
 
