Update: C# docker file and docker compose

--- a/src/backend/Cdb.Calculator.Api/Dockerfile
+++ b/src/backend/Cdb.Calculator.Api/Dockerfile
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
 WORKDIR /build
 
-COPY ./src ./src
+COPY ./src/backend/. ./src
 
 RUN dotnet restore src/Cdb.Calculator.Api/Cdb.Calculator.Api.csproj
 RUN dotnet publish src/Cdb.Calculator.Api/Cdb.Calculator.Api.csproj -c Release -o src/Cdb.Calculator.Api/dist
@@ -13,7 +13,5 @@ COPY --from=build-env /build/src/Cdb.Calculator.Api/dist ./
 ENV ASPNETCORE_ENVIRONMENT=Production
 ENV ASPNETCORE_URLS=http://*:80
 EXPOSE 80
-
-USER app
 
 ENTRYPOINT ["dotnet", "Cdb.Calculator.Api.dll"]
